--- a/main.html
+++ b/main.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Progress Steps</title>
+  </head>
+  <body>
+    <div class="progress-bar">
+      <div id="circle-1" class="circle active"></div>
+      <div id="circle-2" class="circle"></div>
+      <div id="circle-3" class="circle"></div>
+      <div id="circle-4" class="circle"></div>
+      <div id="circle-5" class="circle"></div>
+      <button id="prev" disabled onclick="prevCircle()">Previous</button>
+      <button id="next" onclick="nextCircle()">Next</button>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
+ 
